fix welcome screens on mobile

--- a/src/project/product-list/styles/hero.pcss
+++ b/src/project/product-list/styles/hero.pcss
@@ -171,6 +171,8 @@
         text-align: center;
         margin-top: 30px;
         padding: 0px 65px;
+        top: 0;
+        left: 0;
       }
       @media(--largedesktopH) {
         width: 70%;
